@startuml

title __BASE's Class Diagram__\n

  namespace Base {
    abstract class Base.AbstractActivity {
        {abstract} # getLayout()
        {abstract} # initEventAndData()
        # onCreate()
        {abstract} # onViewCreated()
    }
  }
  

  namespace Base {
    interface Base.AbstractBasePresenter {
        {abstract} + attachView()
        {abstract} + detachView()
    }
  }
  

  namespace Base {
    abstract class Base.BaseActivity {
        + showError()
        + showErrorMsg()
        + showLoading()
        + showNormal()
        {abstract} # createPresenter()
        {abstract} # getLayout()
        {abstract} # initEventAndData()
        # onCreate()
        # onDestroy()
    }
  }
  

  namespace Base {
    abstract class Base.BaseFragment {
        # activity : FragmentActivity
        # context : Context
        - parentView : View
        + onCreate()
        + onCreateView()
        + onDestroy()
        + showError()
        + showErrorMsg()
        + showLoading()
        + showNormal()
        {abstract} # createPresenter()
        {abstract} # getLayout()
        {abstract} # initEventAndData()
    }
  }
  

  namespace Base {
    interface Base.BaseView {
        {abstract} + showError()
        {abstract} + showErrorMsg()
        {abstract} + showLoading()
        {abstract} + showNormal()
    }
  }
  

  namespace Base {
    class Base.DataManager {
        + getRecommenddata()
        + getUserAccount()
    }
  }
  

  namespace Base {
    class Base.RxBasePresenter {
        + RxBasePresenter()
        + attachView()
        + detachView()
    }
  }
  

  Base.AbstractActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Base.BaseActivity .up.|> Base.BaseView
  Base.BaseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Base.BaseActivity o-- T : mPresenter
  Base.BaseFragment .up.|> Base.BaseView
  Base.BaseFragment -up-|> androidx.fragment.app.Fragment
  Base.BaseFragment o-- T : mPresenter
  Base.DataManager o-- Service.NetClient : netClient
  Base.RxBasePresenter .up.|> Base.AbstractBasePresenter
  Base.RxBasePresenter o-- T : mView
  Base.RxBasePresenter o-- Base.DataManager : mdatamanager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
